--- a/package.json
+++ b/package.json
@@ -1,23 +1,41 @@
 {
-  "name": "mcp-server",
+  "name": "@mcpdotdirect/starknet-mcp-server",
   "module": "src/index.ts",
   "type": "module",
   "version": "1.0.0",
-  "description": "Model Context Protocol (MCP) Server",
-  "private": true,
+  "description": "Model Context Protocol (MCP) server for interacting with StarkNet",
+  "private": false,
+  "main": "build/index.js",
+  "bin": {
+    "starknet-mcp-server": "./bin/cli.js"
+  },
+  "files": [
+    "build/",
+    "bin/",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "start": "bun run src/index.ts",
     "build": "bun build src/index.ts --outdir build --target node",
-    "build:http": "bun build src/server/http-server.ts --outdir build --target node",
+    "build:http": "bun build src/server/http-server.ts --outdir build --target node --outfile http-server.js",
     "dev": "bun --watch src/index.ts",
     "start:http": "bun run src/server/http-server.ts",
-    "dev:http": "bun --watch src/server/http-server.ts"
+    "dev:http": "bun --watch src/server/http-server.ts",
+    "prepublishOnly": "bun run build && bun run build:http",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
+    "release": "npm publish",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "changelog:latest": "conventional-changelog -p angular -r 1 > RELEASE_NOTES.md"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/node": "^20.17.24"
+    "@types/node": "^20.17.24",
+    "conventional-changelog-cli": "^5.0.0"
   },
   "peerDependencies": {
     "typescript": "^5.8.2"
@@ -28,5 +46,29 @@
     "express": "^4.21.2",
     "starknet": "^6.23.1",
     "zod": "^3.24.2"
+  },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "starknet",
+    "blockchain",
+    "ai",
+    "agent"
+  ],
+  "author": "mcpdotdirect",
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mcpdotdirect/starknet-mcp-server"
+  },
+  "bugs": {
+    "url": "https://github.com/mcpdotdirect/starknet-mcp-server/issues"
+  },
+  "homepage": "https://github.com/mcpdotdirect/starknet-mcp-server#readme",
+  "publishConfig": {
+    "access": "public"
   }
 }
