--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "starknet": "^6.23.1",
+    "starknetid.js": "3.0.2",
     "zod": "^3.24.2"
   },
   "keywords": [
